MetabaseK8s/metabase-ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig":
        { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
      #alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:166023565235:certificate/e3838003-1b88-4847-bf80-6063a0d3b74d,arn:aws:acm:us-east-1:166023565235:certificate/2bf7dfc3-0df2-4d29-97fe-c69d1182f091
      alb.ingress.kubernetes.io/group.name: api-lb-group
      alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
      alb.ingress.kubernetes.io/scheme: internet-facing
      alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-FS-1-2-Res-2020-10
      alb.ingress.kubernetes.io/target-type: ip
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"alb.ingress.kubernetes.io/actions.ssl-redirect":"{\"Type\": \"redirect\", \"RedirectConfig\": { \"Protocol\": \"HTTPS\", \"Port\": \"443\", \"StatusCode\": \"HTTP_301\"}}","alb.ingress.kubernetes.io/certificate-arn":"arn:aws:acm:us-east-1:166023565235:certificate/e3838003-1b88-4847-bf80-6063a0d3b74d,arn:aws:acm:us-east-1:166023565235:certificate/2bf7dfc3-0df2-4d29-97fe-c69d1182f091","alb.ingress.kubernetes. [...]
      kubernetes.io/ingress.class: alb
    creationTimestamp: "2023-06-22T12:05:42Z"
    finalizers:
    - group.ingress.k8s.aws/api-lb-group
    generation: 2
    labels:
      project: metabase
    name: metabase
    namespace: metabase
    resourceVersion: "258680521"
    uid: e1a61fff-81e0-42bc-b9a7-7da361283f9c
  spec:
    rules:
    - host: metabase.click2sure.co.za
      http:
        paths:
        - backend:
            service:
              name: ssl-redirect
              port:
                name: use-annotation
          path: /*
          pathType: ImplementationSpecific
        - backend:
            service:
              name: metabase
              port:
                number: 3000
          path: /*
          pathType: ImplementationSpecific
  status:
    loadBalancer:
      ingress:
      - hostname: aaa165a476d844d2388e66288b96dac4-1428103036.eu-west-1.elb.amazonaws.com
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
